# CTTS

./: CMakeLists.txt  README.md
cmake/: dependencies_fetch.cmake
src/: CMakeLists.txt  global_parameters.h  main.c
src/DudeCT/: CMakeLists.txt  ctts_dudect_main.c  ctts_dudect_main.h  dudect.h
submodules/: CMakeLists.txt
submodules/test_project/: CMakeLists.txt  test_function.c  test_function.h
